[gd_scene load_steps=2 format=3 uid="uid://camera001"]

[ext_resource type="Script" path="res://src/camera/camera_rig.gd" id="1_rig"]

[node name="CameraRig" type="Node3D"]
script = ExtResource("1_rig")

[node name="YawPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="YawPivot"]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="YawPivot/PitchPivot"]
spring_length = 20.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="YawPivot/PitchPivot/SpringArm3D"]
projection = 1
size = 16.0
far = 200.0
